fix console being not visible
For some reason it is seemingly stuck on the sticky playbar block, perhaps this was somehow by mistake? Anyhow it would have stopped the acrylic effect from appearing on window focus. WTH?!?

--- a/css/settings/millennium.css
+++ b/css/settings/millennium.css
@@ -26,6 +26,7 @@
   padding: 0px !important;
   max-height: 32px !important;
   order: 2 !important;
+  min-width: 32px !important;
 }
 
 ._1aw7cA3mAZfWt8idAlVJWi ._3epr8QYWw_FqFgMx38YEEm.millenniumIconButton svg {
